<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Stats Calc</string>
    <string name="basicInput">Click the options menu to load a data set.</string>
    <string name="mean">Mean</string>
    <string name="median">Median</string>
    <string name="standard_deviation">Standard Deviation</string>
    <string name="standard_error">Standard Error</string>
    <string name="calc">Calculate</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="basic_stats">Basic Stats</string>
    <string name="perm_comb">Permutations and Combinations</string>
    <string name="linear_regression">Linear Regression</string>
    <string name="distribution_stats">Distribution Stats</string>
    <string name="manage_data">Manage Data</string>
    <string name="data_title">Data Title:</string>
    <string name="data_points">Data set (X, Y):</string>
    <string name="save_data">Save Data</string>
    <string name="select_data">Select Data</string>
    <string name="number_samples">Num of Samples</string>
    <string name="sum">Sum</string>
    <string name="sample_min">Min</string>
    <string name="sample_max">Max</string>
    <string name="data_management">Data Management</string>
    <string name="processing_data">Processing data...</string>
    <string name="num_data_points"># of Data Points:</string>
    <string name="slope">Slope:</string>
    <string name="intercept">Y Intercept:</string>
    <string name="r_value">R:</string>
    <string name="r_squared">R^2:</string>
    <string name="intercept_standard_error">Intercept Std Err:</string>
    <string name="slope_standard_error">Slope Std Err:</string>
    <string name="mean_square_error">Mean Square Err:</string>
    <string name="significance">Significance:</string>
    <string name="equation">Equation:</string>
    <string name="select_distribution">Select distribution:</string>
    <string-array name="distributions">
        <item>Gaussian</item><item>Poisson</item><item>Bernoulli</item><item>ChiSquared</item>
        <item>T</item>
        
        
        
    </string-array>
        <string name="load_enter_data">Press options to load a data set or enter the values below and press calculate</string>
        <string name="probability">Probability:</string>
        <string name="calculate_probability">Calculate Probability</string>
        <string name="solve_for_x">Solve for X</string>
        <string name="kurtosis">Kurtosis</string>
        <string name="skewness">Skewness</string>
        <string name="saved_data">Saved Data:</string>
        <string name="load_data">Press options to select a data set</string>
        <string name="enter_data">Please enter the following data and press calculate</string>
        <string name="expected_observed">When entering data, use the X and Y columns for the expected and observed values, respectively.</string>
        <string name="discrete_stats">Discrete Stats</string>
        <string name="descriptive_stats">Descriptive Stats</string>
        <string name="help_label">Help</string>
        <string name="tables_label">Table</string>
</resources>
