<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content" android:layout_width="fill_parent">
	<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:padding="10dip" android:orientation="vertical">
	    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/textView1" android:text="@string/basicInput"></TextView>
	    <FrameLayout android:layout_width="fill_parent" android:layout_height="300dip" android:id="@+id/regression_graph" android:paddingBottom="5dip"></FrameLayout>
	    <TableLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/tableLayout1" android:stretchColumns="0,1">
	        <TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content">
	            <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/tNumDataPoints" android:text="@string/num_data_points"></TextView>
	        </TableRow>
	        <TableRow android:id="@+id/TableRow04" android:layout_height="wrap_content" android:layout_width="wrap_content">
	            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tEquation" android:text="@string/equation"></TextView>
	        </TableRow>
	        <TableRow android:id="@+id/TableRow05" android:layout_width="wrap_content" android:layout_height="wrap_content">
	            <TextView android:id="@+id/tSignificance" android:text="@string/significance" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	            <TextView android:id="@+id/tMeanSquareError" android:text="@string/mean_square_error" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	        </TableRow>
	        <TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content" android:layout_height="wrap_content">
	            <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/tSlope" android:text="@string/slope"></TextView>
	            <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/tSlopeError" android:text="@string/slope_standard_error"></TextView>
	        </TableRow>
	        <TableRow android:id="@+id/TableRow03" android:layout_width="wrap_content" android:layout_height="wrap_content">
	            <TextView android:layout_height="wrap_content" android:id="@+id/tIntercept" android:layout_width="wrap_content" android:text="@string/intercept"></TextView>
	            <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/tInterceptError" android:text="@string/intercept_standard_error"></TextView>
	        </TableRow>
	        <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
	            <TextView android:layout_height="wrap_content" android:id="@+id/tRValue" android:layout_width="wrap_content" android:text="@string/r_value"></TextView>
	            <TextView android:layout_height="wrap_content" android:id="@+id/tRSquared" android:layout_width="wrap_content" android:text="@string/r_squared"></TextView>
	        </TableRow>
	    </TableLayout>
	</LinearLayout>
</ScrollView>