<?xml version="1.0" encoding="utf-8"?>

<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" android:layout_width="fill_parent">  
	<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:padding="10dip">
	    <TableLayout android:id="@+id/tableLayout1" android:layout_height="fill_parent" android:layout_width="fill_parent" android:stretchColumns="1">
	        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/trBasic1">
	            <TextView android:layout_height="wrap_content" android:text="@string/basicInput" android:layout_width="fill_parent" android:layout_span="2" style="@style/TableRow" android:id="@+id/tBasicInstructions"></TextView>
	        </TableRow>
	        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/trBasic2">
	        	<TextView android:layout_height="wrap_content" android:text="@string/number_samples" android:layout_width="wrap_content" style="@style/TableRow" android:id="@+id/tBasicNumSamplesLabel"></TextView>
	        	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tBasicNumSamples" android:text="0" android:gravity="center" style="@style/TableRow"></TextView>
	        </TableRow>
	        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/trBasic3">
	            
	                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sample_min" style="@style/TableRow" android:id="@+id/tBasicMinLabel"></TextView>
	                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" android:gravity="center" android:id="@+id/tBasicMin" style="@style/TableRow"></TextView>
	            
	        </TableRow>
	        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/trBasic4">
	            
	                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sample_max" style="@style/TableRow" android:id="@+id/tBasicMaxLabel"></TextView>
	                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tBasicMax" android:text="0" android:gravity="center" style="@style/TableRow"></TextView>
	            
	        </TableRow>
	        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/trBasic5">
	            
	                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sum" style="@style/TableRow" android:id="@+id/tBasicSumLabel"></TextView>
	                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tBasicSum" android:text="0" android:gravity="center" style="@style/TableRow"></TextView>
	            
	        </TableRow>
	        <TableRow android:layout_gravity="left" android:gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/trBasic6">
	            
	                <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/mean" style="@style/TableRow" android:id="@+id/tBasicMeanLabel"></TextView>
	                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tBasicMean" android:text="0" android:gravity="center" style="@style/TableRow"></TextView>
	          
	        </TableRow>
	        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/trBasic7">
	          
	                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/median" style="@style/TableRow" android:id="@+id/tBasicMedianLabel"></TextView>
	                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tBasicMedian" android:text="0" android:gravity="center" style="@style/TableRow"></TextView>
	          
	        </TableRow>
	        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/trBasic8">
	          
	                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/standard_deviation" style="@style/TableRow" android:id="@+id/tBasicStandardDeviationLabel"></TextView>
	                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tBasicStandardDeviation" android:text="0" android:gravity="center" style="@style/TableRow"></TextView>
	          
	        </TableRow>
	        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/trBasic9">
	            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/kurtosis" style="@style/TableRow" android:id="@+id/tBasicKurtosisLabel"></TextView>
	            <TextView android:layout_width="wrap_content" android:gravity="center" android:text="0" android:layout_height="wrap_content" android:id="@+id/tBasicKurtosis" style="@style/TableRow"></TextView>
	        </TableRow>
	        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/trBasic10">
	            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/skewness" style="@style/TableRow" android:id="@+id/tBasicSkewnessLabel"></TextView>
	            <TextView android:layout_width="wrap_content" android:gravity="center" android:text="0" android:layout_height="wrap_content" android:id="@+id/tBasicSkewness" style="@style/TableRow"></TextView>
	        </TableRow>
	    </TableLayout>
	</LinearLayout>
</ScrollView>